Applied fixes to JSF xhtml and java files using JSF 4.0 URIs and param names, applied @Serial across so full code base. For this changeset the open rewrite recipe org.openrewrite.java.spring.boot4.UpgradeSpringBoot_4_0 was used with manual adjustments.